Fixed UI issues on smaller screens related to the sign in form and classlist components

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -7,6 +7,7 @@ div#index-main {
     padding-bottom: 60px;
     width: 100%;
     height: 100%;
+    min-height: 650px;
 }
 
 div#authentication-container {
